<resources>
    <string name="app_name">Android Warner</string>
    <!-- String's Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required !</string>
    <string name="error_email_empty">Please type your email address !</string>
    <string name="error_password_empty">Please enter your password !</string>
    <string name="error_aut">Authentication failed !</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="email_id">Email address</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="create_account">Create an Account</string>
    <string name="member_login">Already a member? Login</string>
    <string name="after_login">Login Successfull!</string>
    <string name="logout">Logout</string>
    <string name="failed">Failed to login </string>
    <string name="success">Login Successful</string>
    <string name="alarm">Alarm</string>
    <string name="label_alarm">Alarm Activity</string>
    <string name="set_alarm">SET ALARM</string>
    <string name="selectTime_btn">SELECT TIME</string>
    <string name="no_alarm_set">No Alarm Set</string>


</resources>
